Add abort command